fixed overflow

--- a/src/pages/MainPage/components/StoriesSection/StoriesSection.scss
+++ b/src/pages/MainPage/components/StoriesSection/StoriesSection.scss
@@ -17,7 +17,7 @@
     padding: 64px 16px 250px;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
+    overflow: hidden;
   }
 
   .background-image {
